# LVideoEdit

./: README.md  make.bat
Coding/: CMakeLists.txt
Coding/.github/: copilot-instructions.md
Coding/LLibraryMoudle/: CMakeLists.txt  llibraryexport.h  llibrarytopbuttonpannel.cpp  llibrarytopbuttonpannel.h  llibrarytopbuttonpannel.ui
Coding/LTimeLineMoudle/: CMakeLists.txt  ltimelineexport.h  ltimelineruler.cpp  ltimelineruler.h  ltimelinewidget.cpp  ltimelinewidget.h
Coding/LVideoEditor/: CMakeLists.txt  lvideoeditor.cpp  lvideoeditor.h  main.cpp
Coding/LVideoEditor/res/: icons.qrc
